commit do pedro santos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg primary-bg-color py-4 px-2" id="navbar">
     <div class="container">
-      <a class="navbar-brand" href="#">ExactTime</a>
+      <a class="navbar-brand" href="#"><img src="logo6.png" width="175px"></a>
       <div id="navbar-items">
         <div></div>
         <form class="d-flex" id="search-form">
@@ -119,76 +119,38 @@
       </button>
     </div>
     <!-- MINI BANNERS -->
+    <br>
+    <br>
+    <h1>MAIS VENDIDOS</h1>
+    <br>
+    <br>
+    <br>
     <div class="container" id="mini-banners">
+      <container class="transparente">
       <div class="row justify-content-around">
         <div class="col-12 dark-bg-color" id="mini-banner-1">
-          <h2>Nova Coleção</h2>
-          <img src="img/relogio1.png" alt="Relógio 1">
-          <a href="#">Compre Agora</a>
+          <h2>SILVER</h2>
+          <a href="#">Assine Agora</a>
         </div>
+      </container>
         <div class="col-12 secondary-bg-color" id="mini-banner-2">
-          <h2>Promoções</h2>
-          <img src="img/relogio2.png" alt="Relógio 1">
-          <a href="#">Compre Agora</a>
+          <h2>GOLD</h2>
+          <a href="#">Assine Agora</a>
         </div>
         <div class="col-12 light-bg-color" id="mini-banner-3">
-          <h2 class="secondary-color">Edição Limitada</h2>
-          <a href="#">Compre Agora</a>
-          <img src="img/relogio3.png" alt="Relógio 1">
+          <h2 class="secondary-color">DIAMOND</h2>
+          <a href="#">Assine Agora</a>
+        </div>
+        <div class="col-12 light-bg-color" id="mini-banner-3">
+          <h2 class="secondary-color">PLATINIUM</h2>
+          <a href="#">Assine Agora</a>
         </div>
       </div>
     </div>
   </div>
   <!-- BEST SELLERS -->
-  <div class="container" id="best-sellers">
-    <h2 class="title primary-color">Best Sellers</h2>
-    <div class="row">
-      <div class="col-12 col-md-3">
-        <div class="card primary-bg-color">
-          <img src="img/relogio1.png" class="card-img-top img-fluid" alt="Relógio">
-          <div class="card-body">
-            <p class="card-category secondary-color">Relógio</p>
-            <h5 class="card-title">Nome do produto</h5>
-            <p class="card-text primary-color">R$177.63</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-md-3">
-        <div class="card primary-bg-color">
-          <img src="img/relogio4.png" class="card-img-top img-fluid" alt="Relógio">
-          <div class="card-body">
-            <p class="card-category secondary-color">Relógio</p>
-            <h5 class="card-title">Nome do produto</h5>
-            <p class="card-text primary-color">R$177.63</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-md-3">
-        <div class="card primary-bg-color">
-          <img src="img/relogio5.png" class="card-img-top img-fluid" alt="Relógio">
-          <div class="card-body">
-            <p class="card-category secondary-color">Relógio</p>
-            <h5 class="card-title">Nome do produto</h5>
-            <p class="card-text primary-color">R$177.63</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-md-3">
-        <div class="card primary-bg-color">
-          <img src="img/relogio6.png" class="card-img-top img-fluid" alt="Relógio">
-          <div class="card-body">
-            <p class="card-category secondary-color">Relógio</p>
-            <h5 class="card-title">Nome do produto</h5>
-            <p class="card-text primary-color">R$177.63</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<br>
+<br>
   <!-- BANNER DESTAQUE -->
   <div class="container-fluid" id="bottom-banner">
     <div class="row">
