--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <span class="qty-info">5</span>
           </li>
           <li class="nav-item" id="bag-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="index1.html">
               <i class="bi bi-bag"></i>
               <b>R$ 1290,12</b>
             </a>
@@ -67,12 +67,12 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="#new-products">
             Produtos
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="#bottom-banner">
             Promoções
           </a>
         </li>
@@ -82,7 +82,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="#gallery">
             Contato
           </a>
         </li>
