--- a/index3.html
+++ b/index3.html
@@ -94,28 +94,16 @@
 <div class="container" id="product-area">
     <div class="row">
       <div class="col-md-6">
-        <img src="path/to/product-image.jpg" alt="Product Image" class="img-fluid">
+        <img src="Design sem nome (3).png" style="width: 300px;"alt="Product Image" class="img-fluid">
       </div>
       <div class="col-md-6">
-        <h2>CAMISA</h2>
-        <p>CAMISA</p>
-        <p class="product-price">Price: $XX.XX</p>
-        <label for="size"><p>Select Size:</p></label>
-        <select class="form-select" id="size" name="size">
-          <option value="PP">PP</option>
-          <option value="P">P</option>
-          <option value="M">M</option>
-          <option value="G">G</option>
-          <option value="GG">GG</option>
-          <option value="G1">G1</option>
-          <option value="G2">G2</option>
-          <option value="G3">G3</option>
-          <option value="G4">G4</option>
-          <option value="G5">G5</option>
-        </select>
-        <br>
+        <h2>FONE DE OUVIDO</h2>
+        <p>Projetado para proporcionar uma experiência auditiva imersiva e conveniente, este fone de ouvido é o parceiro perfeito para suas aventuras diárias, sessões de treino e momentos de relaxamento.</p>
+        <p class="product-price">VALOR: R$99.99</p>
         <button class="secondary-bg-color" style="border-radius: 5px;" id="">Buy Now</button>
-        <div id="botaoadd"><a href="#" id="adicionarCarrinho" onclick="adicionarAoCarrinho()">ADICIONAR AO CARRINHO</a></div>
+        <br>
+        <br>
+        <div id="botaoadd"><a href="#" style="text-decoration: none; color:#050A30" id="adicionarCarrinho" onclick="adicionarAoCarrinho()">ADICIONAR AO CARRINHO</a></div>
       </div>
     </div>
   </div>
@@ -124,10 +112,9 @@
 <script>
 
 function adicionarAoCarrinho() {
-  var produto = "CAMISA"; // Nome do produto
-  var tamanho = document.getElementById("size").value; // Capturar o valor do tamanho selecionado
+  var produto = "FONE DE OUVIDO"; // Nome do produto
   var quantidade = 1; // Quantidade do produto
-  var preco = 67.00; // Preço do produto
+  var preco = 99.99; // Preço do produto
 
   // Encontre uma posição vazia no carrinho
   var i = 1;
@@ -136,7 +123,7 @@ function adicionarAoCarrinho() {
   }
 
   // Adicione os dados do produto à localStorage
-  localStorage.setItem("produto" + i, produto + " " + "tamanho" + " " + tamanho); // Incluindo o tamanho
+  localStorage.setItem("produto" + i, produto + " "); // Incluindo o tamanho
   localStorage.setItem("qtd" + i, quantidade);
   localStorage.setItem("valor" + i, preco);
 
