commit do pedro santos

--- a/index.html
+++ b/index.html
@@ -126,23 +126,21 @@
     <br>
     <br>
     <div class="container" id="mini-banners">
-      <container class="transparente">
       <div class="row justify-content-around">
-        <div class="col-12 dark-bg-color" id="mini-banner-1">
+        <div class="col-12 silver" id="mini-banner-1">
           <h2>SILVER</h2>
           <a href="#">Assine Agora</a>
         </div>
-      </container>
-        <div class="col-12 secondary-bg-color" id="mini-banner-2">
+        <div class="col-12 gold" id="mini-banner-2">
           <h2>GOLD</h2>
           <a href="#">Assine Agora</a>
         </div>
-        <div class="col-12 light-bg-color" id="mini-banner-3">
-          <h2 class="secondary-color">DIAMOND</h2>
+        <div class="col-12 diamond" id="mini-banner-3">
+          <h2>DIAMOND</h2>
           <a href="#">Assine Agora</a>
         </div>
-        <div class="col-12 light-bg-color" id="mini-banner-3">
-          <h2 class="secondary-color">PLATINIUM</h2>
+        <div class="col-12 platinium" id="mini-banner-4">
+          <h2>PLATINIUM</h2>
           <a href="#">Assine Agora</a>
         </div>
       </div>
