--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
   <div class="container-fluid" id="bottom-banner">
     <div class="row">
       <div class="col-12 col-md-8">
-        <p class="primary-color offer-subtitle">Desconto de até 75%</p>
-        <h2 class="light-color">Relógio X</h2>
-        <p class="secondary-color">Presenteie o seu amor com este relógio luxuoso</p>
-        <a href="#" class="btn btn-primary">Comprar agora</a>
+        <p class="primary-color offer-subtitle">Venha nos visitar e ganhe uma...</p>
+        <h2 class="light-color">AULA EXPERIMENTAL</h2>
+        <p class="secondary-bg-color">Agende sua visita</p>
+        <a href="#" class="btn btn-primary">Agendar</a>
       </div>
       <div class="col-12 col-md-4">
-        <img src="img/relogio7.png" alt="Relógio 7">
+        <img src="logo4.png" alt="Relógio 7">
       </div>
     </div>
   </div>
