--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Fav icon -->
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="logo4.png" type="image/x-icon">
   <title>BodyFitness</title>
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -95,17 +95,17 @@
     <div id="slider" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/banner1.jpg" class="d-block w-100 img-fluid" alt="...">
+          <img src="fotobanner.png" class="d-block w-100 img-fluid" alt="...">
           <div class="carousel-caption primary-bg-color">
-            <h5>Relógios de luxo</h5>
-            <p>Para você estar pronto em qualquer situação.</p>
+            <h5>Acredite</h5>
+            <p>Na sua própria mudança!</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/banner3.jpg" class="d-block w-100 img-fluid" alt="...">
+          <img src="fotobanner1.jpg" class="d-block w-100 img-fluid" alt="...">
           <div class="carousel-caption primary-bg-color">
-            <h5>Linha Importada</h5>
-            <p>Conheça os melhores relógios suiços, com pronta entrega.</p>
+            <h5>A Persistência</h5>
+            <p>Realiza o impossível!</p>
           </div>
         </div>
       </div>
