--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
         <div class="row">
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src="img/relogio7.png" class="card-img-top img-fluid" alt="Relógio">
+              <img src="regata.jpg" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
-                <p class="card-category">Relógio</p>
-                <h5 class="card-title">Nome do produto</h5>
+                <p class="card-category">Regata</p>
+                <h5 class="card-title">Reagata Body Fitness</h5>
                 <p class="card-text">R$177.63</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
