--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
               <img src="regata.jpg" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
                 <p class="card-category">Regata</p>
-                <h5 class="card-title">Reagata Body Fitness</h5>
-                <p class="card-text">R$177.63</p>
+                <h5 class="card-title">Regata Body Fitness</h5>
+                <p class="card-text">R$49,99</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
