--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="row">
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src="regata.jpg" class="card-img-top img-fluid" alt="Relógio">
+              <img src="regata2.jpg" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
                 <p class="card-category">Regata</p>
                 <h5 class="card-title">Regata Body Fitness</h5>
@@ -187,29 +187,29 @@
           </div>
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src="img/relogio6.png" class="card-img-top img-fluid" alt="Relógio">
+              <img src="moletombranco.png" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
-                <p class="card-category">Relógio</p>
-                <h5 class="card-title">Nome do produto</h5>
-                <p class="card-text">R$177.63</p>
+                <p class="card-category">Moletom</p>
+                <h5 class="card-title">Moletom Body Fitness</h5>
+                <p class="card-text">R$149,99</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src="img/relogio5.png" class="card-img-top img-fluid" alt="Relógio">
+              <img src="coqueteleira.png" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
-                <p class="card-category">Relógio</p>
+                <p class="card-category">Coqueteleira</p>
                 <h5 class="card-title">Nome do produto</h5>
-                <p class="card-text">R$177.63</p>
+                <p class="card-text">R$29,99</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src="img/relogio4.png" class="card-img-top img-fluid" alt="Relógio">
+              <img src=".png" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
                 <p class="card-category">Relógio</p>
                 <h5 class="card-title">Nome do produto</h5>
