--- a/index.html
+++ b/index.html
@@ -209,10 +209,21 @@
           </div>
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src=".png" class="card-img-top img-fluid" alt="Relógio">
+              <img src="fone.png" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
-                <p class="card-category">Relógio</p>
-                <h5 class="card-title">Nome do produto</h5>
+                <p class="card-category">Fone</p>
+                <h5 class="card-title">Fone Body Fitness</h5>
+                <p class="card-text">R$79,99</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="card primary-bg-color">
+              <img src="camisa.jpg" class="card-img-top img-fluid" alt="Relógio">
+              <div class="card-body">
+                <p class="card-category">Camisa</p>
+                <h5 class="card-title">Camisa Body Fitness</h5>
                 <p class="card-text">R$177.63</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
@@ -220,21 +231,10 @@
           </div>
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src="img/relogio3.png" class="card-img-top img-fluid" alt="Relógio">
+              <img src="sacola.png" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
-                <p class="card-category">Relógio</p>
-                <h5 class="card-title">Nome do produto</h5>
-                <p class="card-text">R$177.63</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-4">
-            <div class="card primary-bg-color">
-              <img src="img/relogio2.png" class="card-img-top img-fluid" alt="Relógio">
-              <div class="card-body">
-                <p class="card-category">Relógio</p>
-                <h5 class="card-title">Nome do produto</h5>
+                <p class="card-category">Sacola Tipo Mochila</p>
+                <h5 class="card-title">Sacola Body Fitness</h5>
                 <p class="card-text">R$177.63</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
