--- a/Index2.html
+++ b/Index2.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Fav icon -->
   <link rel="shortcut icon" href="logo4.png" type="image/x-icon">
-  <title>ExactTime</title>
+  <title>BodyFitness</title>
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
