--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <p class="card-category">Sacola Tipo Mochila</p>
                 <h5 class="card-title">Sacola Body Fitness</h5>
                 <p class="card-text">R$177.63</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+                <a href="index1.html" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
