commit do pedro santos

--- a/index3.html
+++ b/index3.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Fav icon -->
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <title>ExactTime</title>
+  <link rel="shortcut icon" href="logo4.png" type="image/x-icon">
+  <title>BodyFitness</title>
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
