--- a/index10.html
+++ b/index10.html
@@ -62,17 +62,17 @@
       </button>
       <ul class="navbar-nav mb-2 mb-lg-0 collapse navbar-collapse" id="bottom-navbar">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">
+          <a class="nav-link" href="#">
             Home
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html #new-products">
+          <a class="nav-link" href="#new-products">
             Produtos
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html #bottom-banner">
+          <a class="nav-link" href="#bottom-banner">
             Promoções
           </a>
         </li>
@@ -82,91 +82,34 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html #gallery">
+          <a class="nav-link" href="#gallery">
             Contato
           </a>
         </li>
       </ul>
     </div>
   </nav>
-  <!-- New Product Area -->
-<!-- New Product Area -->
-<div class="container" id="product-area">
-    <div class="row">
-        <div class="col-md-6">
-            <img src="camisab.png" alt="Product Image" class="img-fluid">
-          </div>
-          
-      <div class="col-md-6">
-        <h2>CAMISA</h2>
-        <p>CAMISA</p>
-        <p class="product-price">Price: $60.90</p>
-        <label for="size"><p>Tamanho:</p></label>
-        <select class="form-select" id="size" name="size">
-          <option value="PP">PP</option>
-          <option value="P">P</option>
-          <option value="M">M</option>
-          <option value="G">G</option>
-          <option value="GG">GG</option>
-          <option value="G1">G1</option>
-          <option value="G2">G2</option>
-          <option value="G3">G3</option>
-          <option value="G4">G4</option>
-          <option value="G5">G5</option>
-        </select>  
-        <br>
-        <label for="size"><p>Cor:</p></label> 
-        <select class="form-select" id="color" name="color" onchange="changeShirtColor()">
-            <option value="white">Branco</option>
-            <option value="black">Preto</option>
-          </select>   
-        <br>
-        <button class="secondary-bg-color" style="border-radius: 5px;" id="">Buy Now</button>
-        <br>
-        <br>
-        <div id="botaoadd"><a href="#" style="text-decoration: none; color:#050A30" id="adicionarCarrinho" onclick="adicionarAoCarrinho()">ADICIONAR AO CARRINHO</a></div>
-      </div>
+  <div class="container" id="favorites-area">
+    <h2>Produtos Favoritos</h2>
+    <div id="favorites-list">
+      <!-- Produtos favoritos serão exibidos aqui -->
     </div>
   </div>
-  
-</body>
-<script>
 
-function adicionarAoCarrinho() {
-  var produto = "CAMISA"; // Nome do produto
-  var tamanho = document.getElementById("size").value; // Capturar o valor do tamanho selecionado
-  var cor = document.getElementById("color").value;
-  var quantidade = 1; // Quantidade do produto
-  var preco = 60.90; // Preço do produto
+  <script>
+    function addToFavorites() {
+      var favoriteButton = document.getElementById("favorite-button");
+      favoriteButton.classList.toggle("active");
 
-  // Encontre uma posição vazia no carrinho
-  var i = 1;
-  while (localStorage.getItem("produto" + i) !== null) {
-    i++;
-  }
+      if (favoriteButton.classList.contains("active")) {
+        var productName = "Nome do Produto Favorito"; // Substitua pelo nome do produto
+        var favoritesList = document.getElementById("favorites-list");
 
-  // Adicione os dados do produto à localStorage
-  localStorage.setItem("produto" + i, produto + " " + "Tamanho:" + " " + tamanho + " " + "Cor:" + " " + cor); // Incluindo tamanho e cor
-  localStorage.setItem("qtd" + i, quantidade);
-  localStorage.setItem("valor" + i, preco);
-
-  // Atualize a página para exibir o produto adicionado no carrinho
-  location.reload();
-}
-function changeShirtColor() {
-  var selectedColor = document.getElementById("color").value;
-  var imgElement = document.querySelector('.img-fluid');
-
-  if (selectedColor === "white") {
-    imgElement.src = "camisab.png";
-  } else if (selectedColor === "black") {
-    imgElement.src = "camisap.png";
-  }
-}
-function addToFavorites() {
-    var favoriteButton = document.getElementById("favorite-button");
-    favoriteButton.classList.toggle("active");
-}
-</script>
+        var favoriteItem = document.createElement("p");
+        favoriteItem.textContent = productName;
+        favoritesList.appendChild(favoriteItem);
+      }
+    }
+  </script>
 </body>
 </html>
