--- a/Index2.html
+++ b/Index2.html
@@ -102,7 +102,7 @@
       </button></h2>
   
         <p>CAMISA</p>
-        <p class="product-price">Price: $XX.XX</p>
+        <p class="product-price">Price: R$49,99</p>
         <label for="size"><p>Select Size:</p></label>
         <select class="form-select" id="size" name="size">
           <option value="PP">PP</option>
