--- a/index7.html
+++ b/index7.html
@@ -94,7 +94,7 @@
 <div class="container" id="product-area">
     <div class="row">
       <div class="col-md-6">
-        <img src="sacola3.png" alt="Product Image" class="img-fluid">
+        <img src="coqueteleira.png" alt="Product Image" class="img-fluid">
       </div>
       <div class="col-md-6">
         <h2>MOCHILA<button class="btn favorite-btn" id="favorite-button" onclick="addToFavorites()">
@@ -102,26 +102,11 @@
       </button></h2>
   
         <p>CAMISA</p>
-        <p class="product-price">Price: $35.00</p>
-        <label for="size"><p>Select Size:</p></label>
-        <select class="form-select" id="size" name="size">
-          <option value="PP">PP</option>
-          <option value="P">P</option>
-          <option value="M">M</option>
-          <option value="G">G</option>
-          <option value="GG">GG</option>
-          <option value="G1">G1</option>
-          <option value="G2">G2</option>
-          <option value="G3">G3</option>
-          <option value="G4">G4</option>
-          <option value="G5">G5</option>
-        </select>  
-        <br>
+        <p class="product-price">Price: $30.99</p>
         <label for="size"><p>Select Color:</p></label> 
         <select class="form-select" id="color" name="color" onchange="changeShirtColor()">
+            <option value="black">Preto</option>
             <option value="white">Branco</option>
-            <option value="blue">Azul</option>
-            <option value="pink">Rosa</option>
           </select>   
 <br>
         <button class="secondary-bg-color" style="border-radius: 5px;" id="">Buy Now</button>
@@ -149,11 +134,10 @@ function addToFavorites() {
 }
 
 function adicionarAoCarrinho() {
-  var produto = "MOCHILA"; // Nome do produto
-  var tamanho = document.getElementById("size").value; // Capturar o valor do tamanho selecionado
+  var produto = "COQUETELEIRA"; // Nome do produto
   var cor = document.getElementById("color").value;
   var quantidade = 1; // Quantidade do produto
-  var preco = 35.00; // Preço do produto
+  var preco = 30.99; // Preço do produto
 
   // Encontre uma posição vazia no carrinho
   var i = 1;
@@ -162,7 +146,7 @@ function adicionarAoCarrinho() {
   }
 
   // Adicione os dados do produto à localStorage
-  localStorage.setItem("produto" + i, produto + " " + "Tamanho:" + " " + tamanho + " " + "Cor:" + " " + cor); // Incluindo tamanho e cor
+  localStorage.setItem("produto" + i, produto + " " + "Cor:" + " " + cor); // Incluindo tamanho e cor
   localStorage.setItem("qtd" + i, quantidade);
   localStorage.setItem("valor" + i, preco);
 
@@ -173,12 +157,10 @@ function changeShirtColor() {
   var selectedColor = document.getElementById("color").value;
   var imgElement = document.querySelector('.img-fluid');
 
-  if (selectedColor === "white") {
-    imgElement.src = "sacola3.png";
-  } else if (selectedColor === "blue") {
-    imgElement.src = "sacola2.png";
-  } else if (selectedColor === "pink") {
-    imgElement.src = "sacola4.png";
+  if (selectedColor === "black") {
+    imgElement.src = "coqueteleira.png";
+  } else if (selectedColor === "white") {
+    imgElement.src = "coqueteleira2.png";
   }
 }
 </script>
