--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="row">
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src="regata2.jpg" class="card-img-top img-fluid" alt="Relógio">
+              <img src="branco.png" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
                 <p class="card-category">Regata</p>
                 <h5 class="card-title">Regata Body Fitness</h5>
