--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           </div>
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src="camisa.jpg" class="card-img-top img-fluid" alt="Relógio">
+              <img src="camisap.png" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
                 <p class="card-category">Camisa</p>
                 <h5 class="card-title">Camisa Body Fitness</h5>
