--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
               <div class="card-body">
                 <p class="card-category">Fone</p>
                 <h5 class="card-title">Fone Body Fitness</h5>
-                <p class="card-text">R$79,99</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+                <p class="card-text">R$99,99</p>
+                <a href="index3.html" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
