--- a/index3.html
+++ b/index3.html
@@ -94,7 +94,7 @@
 <div class="container" id="product-area">
     <div class="row">
       <div class="col-md-6">
-        <img src="Design sem nome (3).png" style="width: 300px;"alt="Product Image" class="img-fluid">
+        <img src="fone.png" style="width: 300px;"alt="Product Image" class="img-fluid">
       </div>
       <div class="col-md-6">
         <h2>FONE DE OUVIDO</h2>
