--- a/Index2.html
+++ b/Index2.html
@@ -94,7 +94,7 @@
 <div class="container" id="product-area">
     <div class="row">
       <div class="col-md-6">
-        <img src="regata2.jpg" alt="Product Image" class="img-fluid">
+        <img src="preto.png" alt="Product Image" class="img-fluid">
       </div>
       <div class="col-md-6">
         <h2>CAMISA REGATA <button class="btn favorite-btn" id="favorite-button" onclick="addToFavorites()">
