--- a/index1.html
+++ b/index1.html
@@ -98,11 +98,10 @@
     <div id="itens"> </div>
     <br>
     <div class="secondary-bg-color">Total: <span id="total"></span> </div>
-    
     <script>
       var total = 0; // variável que retorna o total dos produtos que estão na LocalStorage.
 			var i = 0;     // variável que irá percorrer as posições
-			var valor = 0; // variável que irá receber o preço do produto convertido em Float.
+			var valor = 0; // variáve'l que irá receber o preço do produto convertido em Float.
 	
 			// exibe o total dos recheios
 			document.getElementById("total").innerHTML = total.toFixed(2);
