--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
           </div>
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src="moletombranco.png" class="card-img-top img-fluid" alt="Relógio">
+              <img src="moletompreto.png" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
                 <p class="card-category">Moletom</p>
                 <h5 class="card-title">Moletom Body Fitness</h5>
                 <p class="card-text">R$149,99</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+                <a href="index4.html" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
