--- a/index4.html
+++ b/index4.html
@@ -94,7 +94,7 @@
 <div class="container" id="product-area">
     <div class="row">
         <div class="col-md-6">
-            <img src="moletompreto.png" alt="Product Image" class="img-fluid">
+            <img src="" alt="Product Image" class="img-fluid">
           </div>
           
       <div class="col-md-6">
