--- a/index7.html
+++ b/index7.html
@@ -94,7 +94,7 @@
 <div class="container" id="product-area">
     <div class="row">
       <div class="col-md-6">
-        <img src="coqueteleira.png" alt="Product Image" class="img-fluid">
+        <img src="coqueteleira.png" alt="Product Image" class="img-fluid" width="50%">
       </div>
       <div class="col-md-6">
         <h2>MOCHILA<button class="btn favorite-btn" id="favorite-button" onclick="addToFavorites()">
