--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="row">
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src="regata2.jpg" class="card-img-top img-fluid" alt="Relógio">
+              <img src="preto.png" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
                 <p class="card-category">Regata</p>
                 <h5 class="card-title">Regata Body Fitness</h5>
@@ -192,7 +192,7 @@
                 <p class="card-category">Moletom</p>
                 <h5 class="card-title">Moletom Body Fitness</h5>
                 <p class="card-text">R$149,99</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+                <a href="index4.html" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
@@ -203,7 +203,7 @@
                 <p class="card-category">Coqueteleira</p>
                 <h5 class="card-title">Nome do produto</h5>
                 <p class="card-text">R$29,99</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+                <a href="index7.html" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
@@ -214,13 +214,13 @@
                 <p class="card-category">Fone</p>
                 <h5 class="card-title">Fone Body Fitness</h5>
                 <p class="card-text">R$79,99</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+                <a href="index3.html" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src="camisa.jpg" class="card-img-top img-fluid" alt="Relógio">
+              <img src="camisab.png" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
                 <p class="card-category">Camisa</p>
                 <h5 class="card-title">Camisa Body Fitness</h5>
@@ -231,12 +231,12 @@
           </div>
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src="sacola.png" class="card-img-top img-fluid" alt="Relógio">
+              <img src="sacola2.png" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
                 <p class="card-category">Sacola Tipo Mochila</p>
                 <h5 class="card-title">Sacola Body Fitness</h5>
                 <p class="card-text">R$29,99</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+                <a href="index6.html" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
