--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@
           </div>
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src="sacola.png" class="card-img-top img-fluid" alt="Relógio">
+              <img src="sacola3.png" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
                 <p class="card-category">Sacola Tipo Mochila</p>
                 <h5 class="card-title">Sacola Body Fitness</h5>
                 <p class="card-text">R$29,99</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+                <a href="index6.html" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
