--- a/index4.html
+++ b/index4.html
@@ -94,7 +94,7 @@
 <div class="container" id="product-area">
     <div class="row">
         <div class="col-md-6">
-            <img src="" alt="Product Image" class="img-fluid">
+            <img src="moletom.png" alt="Product Image" class="img-fluid" width="70%">
           </div>
           
       <div class="col-md-6">
@@ -158,9 +158,9 @@ function changeShirtColor() {
   var imgElement = document.querySelector('.img-fluid');
 
   if (selectedColor === "black") {
-    imgElement.src = "moletompreto.png";
+    imgElement.src = "moletom.png";
   } else if (selectedColor === "white") {
-    imgElement.src = "moletombranco.png";
+    imgElement.src = "moletom1.png";
   }
 }
 </script>
