--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           </div>
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src="moletompreto.png" class="card-img-top img-fluid" alt="Relógio">
+              <img src="moletom.png" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
                 <p class="card-category">Moletom</p>
                 <h5 class="card-title">Moletom Body Fitness</h5>
