--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
           <ul class="list-unstyled">
             <li class="mb-2"><a href="#" class="secondary-color">Política de Privacidade</a></li>
             <li class="mb-2"><a href="#" class="secondary-color">Política de Entregas</a></li>
-            <li class="mb-2"><a href="#" class="secondary-color">Rastreie seu pedido</a></li>
+            <li class="mb-2"><a href="https://rastreamento.correios.com.br/app/index.php" class="secondary-color">Rastreie seu pedido</a></li>
           </ul>
         </div>
       </div>
