--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <p class="primary-color offer-subtitle">Venha nos visitar e ganhe uma...</p>
         <h2 class="light-color">AULA EXPERIMENTAL</h2>
         <p class="secondary-bg-color">Agende sua visita</p>
-        <a href="#" class="btn btn-primary">Agendar</a>
+        <a href="#" class="btn btn-primary">Local</a>
       </div>
       <div class="col-12 col-md-4">
         <img src="logo4.png" alt="Relógio 7">
