--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
               <div class="card-body">
                 <p class="card-category">Fone</p>
                 <h5 class="card-title">Fone Body Fitness</h5>
-                <p class="card-text">R$79,99</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+                <p class="card-text">R$99,99</p>
+                <a href="index3.html" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
@@ -231,11 +231,11 @@
           </div>
           <div class="col-12 col-md-4">
             <div class="card primary-bg-color">
-              <img src="sacola3.png" class="card-img-top img-fluid" alt="Relógio">
+              <img src="sacola2.png" class="card-img-top img-fluid" alt="Relógio">
               <div class="card-body">
                 <p class="card-category">Sacola Tipo Mochila</p>
                 <h5 class="card-title">Sacola Body Fitness</h5>
-                <p class="card-text">R$29,99</p>
+                <p class="card-text">R$35,00</p>
                 <a href="index6.html" class="btn btn-primary">Comprar</a>
               </div>
             </div>
