commit do pedro santos

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <p class="primary-color offer-subtitle">Venha nos visitar e ganhe uma...</p>
         <h2 class="light-color">AULA EXPERIMENTAL</h2>
         <p class="secondary-bg-color">Agende sua visita</p>
-        <a href="#" class="btn btn-primary">Local</a>
+        <a href="https://www.google.com.br/maps/place/Escola+SENAI+A.+Jacob+Lafer/@-23.6663679,-46.5211495,17z/data=!3m1!4b1!4m6!3m5!1s0x94ce69d619d62a27:0x41f94d2be4af4536!8m2!3d-23.6663728!4d-46.5185746!16s%2Fg%2F1tfqbc0l?entry=ttu" class="btn btn-primary">Local</a>
       </div>
       <div class="col-12 col-md-4">
         <img src="logo4.png" alt="Relógio 7">
