--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         <div class="col-12 col-md-4 footer-column">
           <h3>Informações</h3>
           <ul class="list-unstyled">
-            <li class="mb-2"><a href="#" class="secondary-color">Política de Privacidade</a></li>
+            <li class="mb-2"><a href="index8.html" class="secondary-color">Política de Privacidade</a></li>
             <li class="mb-2"><a href="#" class="secondary-color">Política de Entregas</a></li>
             <li class="mb-2"><a href="https://rastreamento.correios.com.br/app/index.php" class="secondary-color">Rastreie seu pedido</a></li>
           </ul>
