--- a/index3.html
+++ b/index3.html
@@ -97,8 +97,8 @@
         <img src="fone.png" style="width: 300px;"alt="Product Image" class="img-fluid">
       </div>
       <div class="col-md-6">
-        <h2>FONE DE OUVIDO</h2>
-        <p>Projetado para proporcionar uma experiência auditiva imersiva e conveniente, este fone de ouvido é o parceiro perfeito para suas aventuras diárias, sessões de treino e momentos de relaxamento.</p>
+        <h2>Fone Body Fitness</h2>
+        <br>
         <p class="product-price">VALOR: R$99.99</p>
         <button class="secondary-bg-color" style="border-radius: 5px;" id="">Buy Now</button>
         <br>
