--- a/index4.html
+++ b/index4.html
@@ -98,8 +98,7 @@
           </div>
           
       <div class="col-md-6">
-        <h2>MOLETOM</h2>
-        <p>CAMISA</p>
+        <h2>Moletom Body Fitness</h2>
         <p class="product-price">Price: $149.90</p>
         <label for="size"><p>Tamanho:</p></label>
         <select class="form-select" id="size" name="size">
