--- a/index6.html
+++ b/index6.html
@@ -94,15 +94,11 @@
 <div class="container" id="product-area">
     <div class="row">
       <div class="col-md-6">
-        <img src="sacola3.png" alt="Product Image" class="img-fluid">
+        <img src="sacola3.png" alt="Product Image" class="img-fluid" width="70%">
       </div>
       <div class="col-md-6">
-        <h2>MOCHILA<button class="btn favorite-btn" id="favorite-button" onclick="addToFavorites()">
-          <i class="bi bi-heart"></i>
-      </button></h2>
-  
-        <p>CAMISA</p>
-        <p class="product-price">Price: $35.00</p>
+        <h2>Sacola Body Fitness</h2>
+        <p class="product-price">Valor: $35.00</p>
 
         <label for="size"><p>Select Color:</p></label> 
         <select class="form-select" id="color" name="color" onchange="changeShirtColor()">
