--- a/index7.html
+++ b/index7.html
@@ -97,12 +97,9 @@
         <img src="coqueteleira.png" alt="Product Image" class="img-fluid" width="50%">
       </div>
       <div class="col-md-6">
-        <h2>MOCHILA<button class="btn favorite-btn" id="favorite-button" onclick="addToFavorites()">
-          <i class="bi bi-heart"></i>
+        <h2>COQUETELEIRA</i>
       </button></h2>
-  
-        <p>CAMISA</p>
-        <p class="product-price">Price: $30.99</p>
+        <p class="product-price">Valor: R$30.99</p>
         <label for="size"><p>Select Color:</p></label> 
         <select class="form-select" id="color" name="color" onchange="changeShirtColor()">
             <option value="black">Preto</option>
