--- a/index4.html
+++ b/index4.html
@@ -99,7 +99,7 @@
           
       <div class="col-md-6">
         <h2>Moletom Body Fitness</h2>
-        <p class="product-price">Price: $149.90</p>
+        <p class="product-price">Valor: R$149.90</p>
         <label for="size"><p>Tamanho:</p></label>
         <select class="form-select" id="size" name="size">
           <option value="PP">PP</option>
