--- a/index6.html
+++ b/index6.html
@@ -98,7 +98,7 @@
       </div>
       <div class="col-md-6">
         <h2>Sacola Body Fitness</h2>
-        <p class="product-price">Valor: $35.00</p>
+        <p class="product-price">Valor: R$35.00</p>
 
         <label for="size"><p>Select Color:</p></label> 
         <select class="form-select" id="color" name="color" onchange="changeShirtColor()">
