commit de pedro santos

--- a/Index2.html
+++ b/Index2.html
@@ -127,7 +127,7 @@
       <div class="container11">
         <a style="text-decoration: none; color:#000C66" class="btn btn-primary" href="index1.html" onclick="adicionarAoCarrinho()">Comprar</a>
         <label class="container" style="color:#000C66" onclick="addToFavorites()">
-          <input checked="checked" type="checkbox">
+          <input checked="checked" type="checkbox" style="color:#000C66">
           <div class="checkmark">
             <svg viewBox="0 0 256 256">
             <rect fill="none" height="256" width="256"></rect>
