--- a/index8.html
+++ b/index8.html
@@ -191,7 +191,7 @@ O uso do site é por sua conta e risco. Não garantimos que o site estará livre
             <a>Li e Aceito todos os termos de uso indicados</a>
         </label>
     </div>
-    <a href="index1.html">
+    <a href="index.html">
     <button>
         Submit
     </button>
