--- a/index3.html
+++ b/index3.html
@@ -39,7 +39,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="index10.html">
               <i class="bi bi-heart"></i>
             </a>
           </li>
@@ -100,6 +100,7 @@
         <div class="container11">
           <a style="text-decoration: none; color:#000C66" class="btn btn-primary" href="index1.html" onclick="adicionarAoCarrinho()">Comprar</a>
           <label class="container" style="color:#000C66" onclick="addToFavorites()">
+            <a class="nav-link" href="#" onclick="addToFavorites('FONE DE OUVIDO')">
             <input checked="checked" type="checkbox" style="color:#000C66">
             <div class="checkmark">
               <svg viewBox="0 0 256 256">
@@ -107,6 +108,7 @@
               <path d="M224.6,51.9a59.5,59.5,0,0,0-43-19.9,60.5,60.5,0,0,0-44,17.6L128,59.1l-7.5-7.4C97.2,28.3,59.2,26.3,35.9,47.4a59.9,59.9,0,0,0-2.3,87l83.1,83.1a15.9,15.9,0,0,0,22.6,0l81-81C243.7,113.2,245.6,75.2,224.6,51.9Z" stroke-width="20px" stroke="#FFF" fill="none"></path></svg>
             </div>
           </label>
+        </a>
           </div>
         <br>
         <br>
@@ -117,7 +119,14 @@
   
 </body>
 <script>
+function addToFavorites(productName) {
+  var favoritesList = JSON.parse(localStorage.getItem("favorites")) || [];
 
+  if (!favoritesList.includes(productName)) {
+    favoritesList.push(productName);
+    localStorage.setItem("favorites", JSON.stringify(favoritesList));
+  }
+}
 function adicionarAoCarrinho() {
   var produto = "FONE DE OUVIDO"; // Nome do produto
   var quantidade = 1; // Quantidade do produto
