--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </form>
         <ul class="navbar-nav mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="cadastro.html">
               <i class="bi bi-person"></i>
             </a>
           </li>
