--- a/index9.html
+++ b/index9.html
@@ -145,31 +145,21 @@ button:active {
 </style>
 <body>
     <header>
-        <h1>Política de Privacidade</h1>
+        <h1>Política de Entregas</h1>
     </header>
     <div class="content">
-        <h2>1. Informações que Coletamos:</h2>
-        <p>Ao utilizar nosso site, podemos coletar as seguintes informações pessoais:
+        <h2>1. Processamento de Pedidos:</h2>
+        <p>Após recebermos o seu pedido, faremos todos os esforços razoáveis para processá-lo dentro do prazo estipulado e de acordo com as opções de entrega selecionadas.</p>
+        <h2>2. Métodos de Entrega:</h2>
+        
+        Oferecemos diferentes opções de entrega, que podem incluir entrega padrão, entrega expressa, retirada em loja, entre outras. As opções disponíveis serão apresentadas durante o processo de compra.
 
-          Informações de contato, como nome, endereço de e-mail e número de telefone.
-          Informações de pagamento, quando você se inscreve em nossos serviços ou produtos.
-          Informações de perfil, como idade, sexo, interesses e preferências.
-          Informações técnicas, como endereço IP, tipo de navegador, dispositivo utilizado e informações de geolocalização.
-          Informações geradas por cookies e tecnologias similares.</p>
-        <h2>2. Uso do Conteúdo</h2>
+        <h2>3. Prazos de Entrega:</h2>
 
-Todo o conteúdo disponível neste site, incluindo textos, imagens, vídeos, áudios e outros materiais, é de propriedade da academia Bory Fitness ou de seus respectivos proprietários e é protegido por leis de direitos autorais e outras leis de propriedade intelectual. Você pode utilizar o conteúdo somente para fins pessoais, não comerciais e educacionais. Qualquer uso não autorizado do conteúdo é estritamente proibido.
+        Os prazos de entrega variam de acordo com o método de entrega selecionado, a localização e a disponibilidade do produto. Faremos o possível para cumprir os prazos estimados, mas não nos responsabilizamos por atrasos decorrentes de circunstâncias fora do nosso controle.
+<h2>4. Taxas de Entrega:</h2>
 
-<h2>3. Compartilhamento de Informações:</h2>
-
-Não compartilhamos suas informações pessoais com terceiros, exceto em situações limitadas, como:
-
-Parceiros de serviços: Compartilhamos informações com provedores de serviços terceirizados que nos auxiliam na operação do site e na prestação de serviços.
-Cumprimento legal: Podemos divulgar informações em resposta a solicitações legais, como intimações ou ordens judiciais.
-Consentimento: Com seu consentimento explícito, podemos compartilhar suas informações para fins de marketing.
-<h2>4. Privacidade</h2>
-
-Ao utilizar o site, você concorda com a nossa Política de Privacidade, que descreve como coletamos, armazenamos e utilizamos suas informações pessoais. Você pode acessar a Política de Privacidade [aqui](link para a política de privacidade).
+As taxas de entrega são calculadas com base no método de entrega escolhido, no endereço de entrega e no peso/volume do produto. As taxas serão exibidas claramente durante o processo de compra.
 
 <h2>5.  Menores de Idade:</h2>
 
