--- a/index9.html
+++ b/index9.html
@@ -161,17 +161,17 @@ button:active {
 
 As taxas de entrega são calculadas com base no método de entrega escolhido, no endereço de entrega e no peso/volume do produto. As taxas serão exibidas claramente durante o processo de compra.
 
-<h2>5.  Menores de Idade:</h2>
+<h2>5. Rastreamento de Pedidos:</h2>
 
-Nosso site não se destina a menores de 18 anos. Não coletamos intencionalmente informações pessoais de menores. Se você é pai/mãe ou responsável e acredita que seu filho nos forneceu informações pessoais, entre em contato conosco.
+Explique se os clientes receberão informações de rastreamento para acompanhar seus pedidos e como isso funcionará.
 
-<h2>6. Rescisão</h2>
+<h2>6. Política de Devolução:</h2>
 
-Podemos encerrar ou suspender o seu acesso ao site a qualquer momento, por qualquer motivo, sem aviso prévio.
+Seja transparente sobre sua política de devolução e troca, incluindo como os clientes podem devolver produtos, prazos para devoluções e quais produtos são elegíveis para devolução.
 
-<h2>7. Isenção de Responsabilidade</h2>
+<h2>7. Atrasos na Entrega: </h2>
 
-O uso do site é por sua conta e risco. Não garantimos que o site estará livre de erros, vírus ou interrupções.
+Aborde como a empresa lidará com atrasos na entrega devido a circunstâncias imprevistas, como problemas de transporte, eventos climáticos extremos ou greves.
         <!-- Outras seções dos termos aqui -->
         
         <h2>8. Alterações na Política:</h2>
