--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="index10.html">
               <i class="bi bi-heart"></i>
             </a>
           </li>
