--- a/index5.html
+++ b/index5.html
@@ -24,7 +24,7 @@
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg primary-bg-color py-4 px-2" id="navbar">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="logo6.png" width="175px"></a>
+      <a class="navbar-brand" href="index.html"><img src="logo6.png" width="175px"></a>
       <div id="navbar-items">
         <div></div>
         <form class="d-flex" id="search-form">
