--- a/index1.html
+++ b/index1.html
@@ -39,7 +39,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="index10.html">
               <i class="bi bi-heart"></i>
             </a>
           </li>
@@ -64,12 +64,12 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="index.html #new-products">
             Produtos
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="index.html #bottom-banner">
             Promoções
           </a>
         </li>
@@ -79,7 +79,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="index.html #gallery">
             Contato
           </a>
         </li>
