--- a/cadastro.html
+++ b/cadastro.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Fav icon -->
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="logo4.png" type="image/x-icon">
   <title>ExactTime</title>
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -211,3 +211,4 @@
     </div>
 
               <button class="btn btn-primary" type="submit"><a href="login.html">Login</a></button>
+              
