--- a/login.html
+++ b/login.html
@@ -61,27 +61,27 @@
         </button>
         <ul class="navbar-nav mb-2 mb-lg-0 collapse navbar-collapse" id="bottom-navbar">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="#">
               Home
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#new-products">
+            <a class="nav-link" href="index.html #new-products">
               Produtos
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#bottom-banner">
+            <a class="nav-link" href="index.html #bottom-banner">
               Promoções
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="blog.html">
               Blog
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#gallery">
+            <a class="nav-link" href="index.html #gallery">
               Contato
             </a>
           </li>
