--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg primary-bg-color py-4 px-2" id="navbar">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="logo6.png" width="175px"></a>
+      <a class="navbar-brand" href="index.html"><img src="logo6.png" width="175px"></a>
       <div id="navbar-items">
         <div></div>
         <form class="d-flex" id="search-form">
@@ -74,7 +74,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="blog.html">
             Blog
           </a>
         </li>
