--- a/cadastro.html
+++ b/cadastro.html
@@ -123,13 +123,13 @@
       </div>
       <div class="mb-3">
         <br>
-        <label for="formGroupExampleInput2" class="form-label">Senha</label>
-        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Insira sua senha aqui">
+        <p for="senha">Senha:</p>
+        <input type="password" class="form-control" id="senha" placeholder="Digite a sua senha aqui">
       </div>
       <div class="mb-3">
         <br>
-        <label for="formGroupExampleInput2" class="form-label">Confirme sua Senha</label>
-        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Insira sua senha aqui">
+        <p for="senha">Confirme a senha</p>
+        <input type="password" class="form-control" id="senha" placeholder="Confirme sua senha aqui">
       </div>
       <div class="mb-3">
         <br>
