commit do pedro santos

--- a/Index2.html
+++ b/Index2.html
@@ -123,7 +123,7 @@
       <div class="container11">
         <a style="text-decoration: none; color:#000C66" class="btn btn-primary" href="index1.html" onclick="adicionarAoCarrinho()">Comprar</a>
         <label class="container" style="color:#000C66">
-          <a class="nav-link" href="#" onclick="addToFavorites('CAMISA REGATA')">
+          <a class="nav-link" href="index10.html" onclick="addToFavorites('CAMISA REGATA')">
           <input checked="checked" type="checkbox" style="color:#000C66">
           <div class="checkmark">
             <svg viewBox="0 0 256 256">
