--- a/index1.html
+++ b/index1.html
@@ -152,6 +152,7 @@
 			}
     </script>
     
-    <button class="primary-color" type="button" id="limpar" onclick="localStorage.clear(); location.reload();">Limpar carrinho</button>
+    <button class="btn" style="color: white" type="button" id="limpar" onclick="localStorage.clear(); location.reload();">Limpar carrinho</button>
+    <button class="btn" style="color: white" type="button" id="limpar" onclick="localStorage.clear(); location.reload();">Pagar</button>
     </body>
     </html>
